--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ if (CMAKE_CXX_COMPILER_ID MATCHES Clang OR ${CMAKE_CXX_COMPILER_ID} STREQUAL GNU
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall -Wextra -pedantic -Wold-style-cast -lstdc++fs -O0")
 elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
   # using Visual Studio C++
-  set(CMAKE_CXX_FLAGS "/std:c++1z /permissive- /W4 /EHsc")
+  set(CMAKE_CXX_FLAGS "/std:c++17 /permissive- /W4 /EHsc")
 endif()
 
 # Copying of resources to outpud directories
@@ -17,3 +17,5 @@ file(COPY ${RESOURCES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/examples)
 
 # Add executable
 add_executable(Test TestsMain.cpp TestsLexer.cpp TestsParser.cpp TestsSymbolTable.cpp TestsEvaluator.cpp Ast.cpp)
+
+file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/examples" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
