--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,6 @@ file(GLOB RESOURCES ${CMAKE_SOURCE_DIR}/examples/*.ct)
 file(COPY ${RESOURCES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/examples)
 
 # Add executable
-add_executable(Test TestsMain.cpp TestsLexer.cpp TestsParser.cpp TestsSymbolTable.cpp TestsEvaluator.cpp TestsTypecheck.cpp Ast.cpp)
+add_executable(Test TestsMain.cpp TestsLexer.cpp TestsParser.cpp TestsSymbolTable.cpp TestsEvaluator.cpp TestsTypecheck.cpp TestsExternalFuntions.cpp Ast.cpp)
 
 file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/examples" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
