TicTacToe implementation start and added cause argument to type mismatch exception.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,6 @@ file(COPY ${RESOURCES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/examples)
 
 # Add executable
 add_executable(InterpretCLI Cli.cpp Ast.cpp)
-add_executable(Test TestsMain.cpp TestsLexer.cpp TestsParser.cpp TestsSymbolTable.cpp TestsEvaluator.cpp TestsTypecheck.cpp TestsExternalFuntions.cpp Ast.cpp)
+add_executable(Test TestsMain.cpp TestsLexer.cpp TestsParser.cpp TestsSymbolTable.cpp TestsEvaluator.cpp TestsTypecheck.cpp TestsExternalFuntions.cpp TestsTicTacToe.cpp Ast.cpp)
 
 file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/examples" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
