--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,10 @@ endif()
 file(GLOB RESOURCES ${CMAKE_SOURCE_DIR}/examples/*.ct)
 file(COPY ${RESOURCES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/examples)
 
+FILE(GLOB TESTS tests/*.cpp)
+
 # Add executable
 add_executable(InterpretCLI Cli.cpp Ast.cpp)
-add_executable(Test TestsMain.cpp TestsLexer.cpp TestsParser.cpp TestsSymbolTable.cpp TestsEvaluator.cpp TestsTypecheck.cpp TestsExternalFuntions.cpp TestsTicTacToe.cpp Ast.cpp)
+add_executable(Test ${TESTS} Ast.cpp)
 
 file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/examples" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
